# pagmo

./: .gitignore  CMakeLists.txt  aco_8cpp_source.html  aco_8h_source.html  algorithm_2base_8cpp_source.html  algorithm_2cstrs__co__evolution_8cpp_source.html  algorithms_8h_source.html  annotated.html  base__aco_8cpp_source.html  base__aco_8h_source.html  base__stochastic_8cpp_source.html  base__stochastic_8h_source.html  classes.html  classpagmo_1_1algorithm_1_1aco.html  classpagmo_1_1algorithm_1_1aco__inherit__graph.map  classpagmo_1_1algorithm_1_1aco__inherit__graph.md5  classpagmo_1_1algorithm_1_1base.html  classpagmo_1_1algorithm_1_1base__inherit__graph.map  classpagmo_1_1algorithm_1_1base__inherit__graph.md5  classpagmo_1_1algorithm_1_1cstrs__co__evolution.html  classpagmo_1_1problem_1_1base.html  classpagmo_1_1problem_1_1base__aco.html  classpagmo_1_1problem_1_1base__aco__inherit__graph.map  classpagmo_1_1problem_1_1base__aco__inherit__graph.md5  classpagmo_1_1problem_1_1base__stochastic.html  classpagmo_1_1problem_1_1inventory.html  classpagmo_1_1problem_1_1knapsack.html  classpagmo_1_1problem_1_1knapsack__inherit__graph.map  classpagmo_1_1problem_1_1knapsack__inherit__graph.md5  classpagmo_1_1problem_1_1kur.html  classpagmo_1_1problem_1_1laplace.html  classpagmo_1_1problem_1_1levy5.html  classpagmo_1_1problem_1_1mga__1dsm__alpha.html  classpagmo_1_1problem_1_1mga__1dsm__tof.html  classpagmo_1_1problem_1_1michalewicz.html  classpagmo_1_1problem_1_1noisy.html  classpagmo_1_1problem_1_1pol.html  classpagmo_1_1problem_1_1quadrature__encoding.html  classpagmo_1_1problem_1_1quadrature__encoding__inherit__graph.map  classpagmo_1_1problem_1_1quadrature__encoding__inherit__graph.md5  (+122 more)
PyGMO/: CMakeLists.txt  __init__.py
PyGMO/algorithm/: __init__.py  algorithm.cpp
PyGMO/alife/: CMakeLists.txt  __init__.py  alife.py  alife.xode  alifegui.py  asteroid.blend  asteroid.py  asteroid.x3d  crash.py  env.py  environment.py  plane.py  problem.py  robot.py  sphere.py  task.py  viewer.py
PyGMO/alife/control/: planeweights  planeweights2  planeweights3  planeweights4  sphereweights
PyGMO/alife/models/: alife.xode  asteroid.blend  asteroid.x3d  asteroid1.blend  asteroid_textured.blend  asteroid_textured.x3d  makexode.py  robot.xode
PyGMO/alife/ui/: alifeui.py  alifeui.ui
PyGMO/astro_toolbox/: __init__.py  astro_toolbox.cpp
PyGMO/core/: __init__.py  core.cpp
PyGMO/kep_toolbox/: __init__.py  kep_toolbox.cpp
PyGMO/keplerian_toolbox/: CMakeLists.txt  __init__.py  keplerian_toolbox.cpp
PyGMO/problem/: __init__.py  _gtop.py  problem.cpp
PyGMO/visualization/: CMakeLists.txt  CassiniMGA.txt  CassiniMGA_flybyinfo.txt  EarthEarthJupiter.csv  EarthEarthJupiter_flybyinfo.txt  EarthEarth_LEG1.csv  EarthEarth_LEG1_flybyinfo.txt  EarthMarsDSM.txt  EarthMarsDSM_flybyinfo.txt  __init__.py  example1.py  example2.py  example3.py  example4.py  main.py  traj3d.py  traj3d_object.py  traj3d_path.py  traj3d_planet.py  traj3d_traj.py  vector.py
PyGMO/visualization/doc/: Makefile  features.tex
PyGMO/visualization/doc/features/: Makefile
PyGMO/visualization/doc/manual/: Makefile  cover.tex  glossary.tex  manbib.bib  manual.tex
PyGMO/visualization/doc/manual/img/: cover.eps  cover.xcf  example1.eps  example2.eps  example3.eps  example4.eps  guide.eps  guide.xcf
PyGMO/visualization/pyftgl/: CMakeLists.txt  ftgl.cpp
plotting/: gnuplot_renderer.plt  multi-docking.plt  split.py
search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  classes_61.js  classes_62.js  classes_69.js  classes_6b.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_71.js  classes_73.js  classes_74.js  enumvalues_63.js  enumvalues_66.js  enumvalues_72.js  functions_61.js  functions_62.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_68.js  (+13 more)
src/: CMakeLists.txt  algorithms.h  cuda_island.h  cudainfo.cpp  cudainfo.h  logger.h  population.cpp  population.h  problems.h  topologies.h
src/GOclasses/algorithms/: sga.h
src/GOclasses/problems/: docking.cpp  docking.h  docking_fixed_time.cpp  docking_fixed_time.h  docking_problem.cpp  docking_problem.h  docking_with_time.h
src/algorithm/: cma_es.cpp  cma_es.h  cstrs_co_evolution.cpp  cstrs_core.cpp  cstrs_core.h  cstrs_immune_system.cpp  cstrs_self_adaptive.cpp  game_theory.cpp  game_theory.h  sga.cpp
src/ann_toolbox/: ctrnn.cpp  ctrnn.h  cudaty.h  dataset.h  elman_network.cpp  elman_network.h  layer.h  multilayer_perceptron.cpp  multilayer_perceptron.h  neural_network.cpp  neural_network.h  perceptron.cpp  perceptron.h
src/ann_toolbox/cuda/: external_dependency.h  layer.cu  test_lib.cu
src/config_toolbox/: config_parser.cpp  config_parser.h
src/cuda/: common.cu  common.h  cudainfo.cpp  cudainfo.h  cudamem.cpp  cudamem.h  cudaqueue.h  cudasched.cpp  cudasched.h  cudatask.cpp  cudatask.h  cudatimer.cpp  cudatimer.h  dataset.cpp  dataset.h  fitness_tasks.h  kernel.cu  kernel.h  kernel_dims.cpp  kernel_dims.h  layer.cu  layer.h  logger.cpp  logger.h  nnet.cu  nnet.h  pagmo_cuda.h  tasklet.h
src/odeint/: euler.h  euler.hpp  integrator.h  integrator.hpp  integrator_constant_step.hpp  ode_tasks.h  odeint.hpp  resizer.hpp  runge_kutta_4.h  runge_kutta_4.hpp  stepper_half_step.hpp  stepsize_controller_standard.hpp
src/problem/: ackley.cpp  ackley.h  base.cpp  base.h  base_meta.h  cec2010.cpp  cec2010.h  decompose.cpp  decompose.h  docking.cpp  docking.h  docking_positions.h  feasibility_only.cpp  feasibility_only.h  mga_incipit_cstrs.cpp  mga_incipit_cstrs.h  mga_incipit_cstrs_wrapped.cpp  mga_incipit_cstrs_wrapped.h
src_old/ann_toolbox/: ctrnn.cpp  ctrnn.h  multilayer_perceptron.cpp  multilayer_perceptron.h  neural_network.cpp
testing/: docking.cpp  docking.h
tests/: CMakeLists.txt  best_solutions_test.cpp  serialization_problems.cpp
tests/ann_toolbox/: nnettest.cpp
tests/fitness/: fittest.cpp
tests/integrators/: odetest.cpp
(+4 files in other folders)
