

# OpenGL
FIND_PACKAGE(OpenGL)
IF(NOT OPENGL_FOUND)
   MESSAGE(FATAL_ERROR "Library OpenGL not found. Please make sure that you have the OpenGL library installed")
ENDIF(NOT OPENGL_FOUND)

# FTGL
FIND_LIBRARY(FTGL_LIBRARY NAMES ftgl)
FIND_PATH(FTGL_INCLUDE_DIR NAMES FTGL/ftgl.h)
IF(NOT FTGL_LIBRARY OR NOT FTGL_INCLUDE_DIR)
   MESSAGE(FATAL_ERROR "Library FTGL not found. Please make sure that you have the FTGL library installed")
ENDIF(NOT FTGL_LIBRARY OR NOT FTGL_INCLUDE_DIR)
INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIR})
MESSAGE(STATUS "FTGL library: ${FTGL_LIBRARY}")
MESSAGE(STATUS "FTGL include dir: ${FTGL_INCLUDE_DIR}")

# FreeType
INCLUDE(FindFreetype)
IF(NOT FREETYPE_FOUND)
   MESSAGE(FATAL_ERROR "Library FreeType not found. Please make sure that you have the FreeType library installed")
ENDIF(NOT FREETYPE_FOUND)
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
MESSAGE(STATUS "FreeType libraries: ${FREETYPE_LIBRARIES}")
MESSAGE(STATUS "FreeType include dir: ${FREETYPE_INCLUDE_DIRS}")

# Python and friends
FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${Boost_PYTHON_INCLUDE_DIR} ${PYTHON_INCLUDE_PATH})

ADD_LIBRARY(FTGL SHARED ftgl.cpp)
INSTALL(FILES __INIT__.py DESTINATION ${PYTHON_MODULES_PATH})

# Link
TARGET_LINK_LIBRARIES(FTGL ${FTGL_LIBRARY} ${OPENGL_LIBRARY} ${FREETYPE_LIBRARIES} ${PYTHON_LIBRARIES})

